--- a/src/components/App.css
+++ b/src/components/App.css
@@ -24,15 +24,14 @@
 
 .ToDo {
   font-size: large;
-  width: 70%;
+  width: 60%;
   color: #222;
   background-color: inherit;
   border-radius: 10px;
-  margin-left: 3%;
+  margin-left: 7%;
   line-height: 1.75em;
   text-align: left;
-  flex-direction: column;
-  align-items: center;
+  padding-top: 10px;
 }
 
 .List {
@@ -45,9 +44,9 @@
   border-radius: 5px;
   flex-direction: column;
   align-content: center;
-  width: 30%;
+  width: 40%;
   height: 50%;
-  margin-left: 35%;
+  margin-left: 30%;
   margin-top: 15px;
 }
 
@@ -67,8 +66,8 @@
   border-radius: 5px;
   flex-direction: column;
   align-content: center;
-  width: 30%;
+  width: 40%;
   height: 30%;
-  margin-left: 35%;
+  margin-left: 30%;
   margin-top: 15px;
 }
